<resources>
    <string name="app_name">Mobile Trader</string>
    <string name="copywrite">Copyright © 2019 Great Brands Nig ltd. Release 3.1.0</string>
    <string name="Themodules">Modules</string>
    <string name="sales_entries">Sales Entry</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment FIRST</string>

    <string name="menu_sales">Sales</string>
    <string name="menu_history">History</string>
    <string name="menu_commission">Commission</string>
    <string name="ats">Attendant</string>
    <string name="bnks">Payment Bank</string>
    <string name="rcl">Depot Reconciliation</string>
    <string name="rt">Resume</string>
    <string name="ct">Clockout</string>

    <string name="tv_sku">Sku</string>
    <string name="tv_qty">Qty</string>
    <string name="pproceed">Proceed to Sales</string>
    <string name="pclose">Outlet Close</string>
    <string name="cltn">Customer Location</string>
    <string name="title_activity_maps">Map</string>
    <string name="keys">"AIzaSyAUoAalxX7BMwO5G6LCPAV28azXPMMms1c"</string>
    <string name="title_activity_settings">Settings</string>
    <string name="c_order">Complete Order</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="uploadImages">Set your image</string>
    <string name="msg_loading">Loading...</string>
    <string name="buffering_string">Buffering&#8230;</string>
    <string name="toast_message">Playback completed.</string>
    <string name="pick_file">Pick file</string>
    <string name="upload_file">Upload file</string>
    <string name="toast_pick_file_error">Unable to pick file. Check status of file manager.</string>

</resources>
