<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/monsoon"
tools:context=".ui.sales.sales.sales_map_manager.UsersMap">


<androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:theme="@style/ToolbarTheme"
        tools:ignore="MissingConstraints"
        android:elevation="4dp">

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="40dp">


        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
        >
            <ImageView
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    app:srcCompat="@drawable/arrow"
                    tools:layout_editor_absoluteX="1dp"
                    android:id="@+id/imageView3"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp" android:contentDescription="@string/todo"/>

            <TextView
                    android:text="@string/cltn"
                    android:layout_width="match_parent"
                    android:layout_height="29dp"
                    android:id="@+id/titles"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="@dimen/fontSize"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="65dp"
                    android:layout_marginTop="4dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.appcompat.widget.Toolbar>

    <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="5dp"
        android:scrollbars="vertical"
        android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_below="@+id/toolbar"
    android:layout_marginBottom="135dp">
</fragment>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_below="@+id/map"
            android:background="@color/white"
            android:layout_marginTop="-135dp"
    >
        <ImageView
                android:id="@+id/image_map"
                android:layout_margin="20dp"
                android:layout_width="50dp"
                android:layout_height="50dp" tools:ignore="MissingConstraints"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="10dp"
                android:src="@drawable/ic_directions_transit_black_24dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="15dp"/>

        <TextView
                android:id="@+id/duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="0min"
                android:textColor="@color/bg_green"
                android:fontFamily="@font/roboto_bold"
                android:layout_toRightOf="@+id/image_map"
                tools:ignore="MissingConstraints"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="80dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="11dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="35dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="100dp"/>
        <TextView
                android:id="@+id/kilometer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="19sp"
                android:text="0 km"
                android:textColor="@color/borders_lines"
                android:fontFamily="@font/roboto_bold"
                android:layout_below="@+id/duration"
                android:layout_toRightOf="@+id/image_map"
                tools:ignore="MissingConstraints"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="80dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="42dp" android:layout_marginEnd="100dp"/>
        <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:srcCompat="@drawable/ic_navigation"
                android:id="@+id/imageView8"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="15dp" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="10dp" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="10dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


<androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_below="@+id/map"
        android:layout_marginTop="-55dp">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteY="0dp"
            android:id="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/textView5"
            android:background="#e8ac1b"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/white"
    >

        <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:srcCompat="@drawable/clock_in"
                android:id="@+id/imageView5"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="131dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="14dp"/>
        <TextView
                android:text="@string/pclose"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:id="@+id/textView3"
                android:textSize="17sp"
                android:gravity="center"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="82dp"
                android:layout_marginEnd="56dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="15dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:text="@string/ct"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteY="21dp"
            android:id="@+id/textView5"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="#adc83b"
            android:fontFamily="@font/roboto_regular"
            android:textSize="17sp"
            android:gravity="center"
            android:textColor="@color/white">
        <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:srcCompat="@drawable/clock_out"
                android:id="@+id/imageView6"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="14dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="145dp"
                app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
                android:text="@string/pproceed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="15dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="82dp"
                android:layout_marginEnd="56dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="17sp"
                android:gravity="center"
                android:textColor="@color/white"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>